remove mocha test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple server using Express.js to create a static web page",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,6 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "mocha": "^10.6.0"
+    "jest": "29.7.0"
   }
 }
