--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-    build:
+    deploy:
     runs-on: ubuntu-latest
 
 steps:
@@ -24,7 +24,7 @@ steps:
      application_name: MyNodeJSApplication 
      environment_name: MyApplication-Environment
      version_label: 12345
-     region: us-west-2
+     region: us-east-1
      deployment_package: deploy.zip
 
 # Runs tests as defined in the project's package.json
