--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,8 +30,10 @@ jobs:
       - # Installs node modules as specified in the project's package-lock.json
         run: npm ci
 
-      - # This command will only run if a build script is defined in the package.json
-        run: npm run build --if-present
-
       - # Runs tests as defined in the project's package.json
         run: npm test
+
+      - # This command will only run if a build script is defined in the package.json
+        run: npm run build
+
+      
