--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ on:
 # Defines the jobs that the workflow will execute
 jobs:
   # Job identifier, can be any name (here it's 'build')
-  build-job:
+  build:
     # Specifies the type of virtual host environment (runner) to use
     runs-on: ubuntu-latest
 
