--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,8 @@ name: Node.js CI
 
 # Specifies when the workflow should be triggered
 on:
-  push: main
+  push: 
+    branches: [ main ]
   # Also triggers the workflow on 'pull_request' events targeting the 'main' branch
   pull_request:
     branches: main
