--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple server using Express.js to create a static web page",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack src/app.js -o public/bundle.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "webpack": "^5.74.0"
   }
 }
