--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.7",
+    "@webpack-cli/remove": "^0.1.8",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
