--- a/.github/workflows/node.js CI.yml
+++ b/.github/workflows/node.js CI.yml
@@ -22,7 +22,8 @@ jobs:
       - # Sets up the specified version of Node.js
         name: Use Node.js 
         uses: actions/setup-node@v2
-        
+        with:
+          node-version: '14'
 
       - # Installs node modules as specified in the project's package-lock.json
         run: npm ci
