--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,11 @@ jobs:
       - # This command will only run if a build script is defined in the package.json
         run: npm run build
       
+      - # Deploys CloudFormation stack using AWS CloudFormation GitHub Action
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: MyNodeJSStack
+          template: app.yaml
         
 
       
