update node CD & CI.yml

--- a/.github/workflows/node.js CI.yml
+++ b/.github/workflows/node.js CI.yml
@@ -3,6 +3,8 @@ name: Node.js CI
 
 # Specifies when the workflow should be triggered
 on:
+  push:
+    branches: [ main ]
   # Also triggers the workflow on 'pull_request' events targeting the 'main' branch
   pull_request:
     branches: main
@@ -20,10 +22,10 @@ jobs:
         uses: actions/checkout@v2
 
       - # Sets up the specified version of Node.js
-        name: Use Node.js 
-        uses: actions/setup-node@v2
+        name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          node-version: '14'
+          node-version: ${{ matrix.node-version }}
 
       - # Installs node modules as specified in the project's package-lock.json
         run: npm ci
