--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,10 @@ jobs:
         uses: actions/checkout@v2
 
       - # Sets up the specified version of Node.js
-        name: Use Node.js 
-        uses: actions/setup-node@v2
-        with: 
-            node-version: '14'
+        name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
         
       - # Installs node modules as specified in the project's package-lock.json
         run: npm ci
