--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,13 +32,20 @@ jobs:
       - # This command will only run if a build script is defined in the package.json
         run: npm run build
       
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1 # Add your desired region here
+
       - # Deploys CloudFormation stack using AWS CloudFormation GitHub Action
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: MyNodeJSStack
           template: app.yaml
           capabilities: CAPABILITY_IAM
-          region: us-east-1 # Add desired region here
+          
         
 
       
