--- a/app.yml
+++ b/app.yml
@@ -29,6 +29,20 @@ Resources:
       ImageId: ami-04a81a99f5ec58529  # Ubuntu, 24.04 LTS
       SecurityGroupIds: 
        - !Ref NodeJsSG
+      UserData: 
+        Fn::Base64: |
+          #!/bin/bash
+          apt-get update -y
+          apt-get install -y gcc-c++ make
+          curl -sL https://deb.nodesource.com/setup_14.x | bash -
+          apt-get install -y nodejs
+          cd /home/ubuntu
+          git clone https://github.com/franklynux/node-js-app.git
+          cd node-js-app
+          npm install
+          npm start
+
+      
 
 Mappings:
   IPRange:
