--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "jest",
-		"build": "webpack ./src/app.js -o public/bundle.js",
-		"start": "webpack serve --open"
+		"build": "vite build",
+		"start": "vite",
+		"dev" : "vite"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@vitejs/plugin-react": "^4.3.1",
 		"jest": "^29.7.0",
-		"webpack": "^5.93.0",
-		"webpack-cli": "^4.9.1"
+		"vite": "^5.3.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
 	}
 }
