--- a/app.yml
+++ b/app.yml
@@ -31,16 +31,16 @@ Resources:
        - !Ref NodeJsSG
       UserData: 
         Fn::Base64: |
-          #!/bin/bash
-          apt-get update -y
-          apt-get install -y gcc-c++ make
-          curl -sL https://deb.nodesource.com/setup_14.x | bash -
-          apt-get install -y nodejs
-          cd /home/ubuntu
-          git clone https://github.com/franklynux/node-js-app.git
-          cd node-js-app
-          npm install
-          npm start
+            #!/bin/bash
+            sudo apt-get update -y
+            sudo apt-get install -y gcc-c++ make
+            curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+            cd /home/ubuntu
+            git clone https://github.com/franklynux/node-js-app.git
+            cd node-js-app
+            npm install
+            npm start
 
       
 
