--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -2,15 +2,17 @@
 name: Node.js CD
 
 # Specifies when the workflow should be triggered
-on:
-  push: 
-    branches: [ main ]
+
 # Defines the jobs that the workflow will execute
 jobs:
   # Job identifier, can be any name (here it's 'build')
-  deploy:
+   deploy:
     # Specifies the type of virtual host environment (runner) to use
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -26,6 +28,12 @@ jobs:
       - # Installs node modules as specified in the project's package-lock.json
         run: npm ci
 
+      - name: Run Linter
+        run: npx eslint .
+        # 'npx eslint .' runs the ESLint tool on all the files in your repository.
+        # ESLint is a static code analysis tool used to identify problematic patterns in JavaScript code.
+      
+      
       - # Runs tests as defined in the project's package.json
         run: npm test
 
