--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
 		"test": "jest",
 		"build": "vite build",
 		"start": "vite",
-		"dev" : "vite"
+		"dev": "vite"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@eslint/js": "^9.7.0",
 		"@vitejs/plugin-react": "^4.3.1",
+		"eslint": "^9.7.0",
+		"eslint-plugin-react": "^7.35.0",
+		"globals": "^15.8.0",
 		"jest": "^29.7.0",
-		"vite": "^5.3.4",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"vite": "^5.3.4"
 	}
 }
